# Codex_Puzzle

./: .gitignore  Kaggle_Jigsaw.ipynb  LICENSE  Masking_puzzle.ipynb  README.md  TASKS.md  pyproject.toml  requirements.txt  server.py  setup.sh  train_rl.py
.github/workflows/: ci.yml
frontend/: package-lock.json  package.json
frontend/pages/: index.js
frontend/styles/: globals.css
puzzle/: __init__.py  assembly.py  features.py  group.py  rl_env.py  scoring.py  segmentation.py  watershed.py
puzzle/api/: __init__.py  canvas_api.py  rl_api.py  segmentation_api.py  state.py
tests/: test_features.py  test_group.py  test_scoring.py  test_segmentation.py  test_server.py  test_webapp.py
webapp/: app.py
webapp/templates/: index.html
