[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "puzzle"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "opencv-python-headless",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["puzzle*"]
